# mih

./: CMakeLists.txt  setup.py  test.py
include/: mihasher.h  myhdf5.h
src/: mihasher.cpp  mihmodule.cpp
